# rust-vendor

./: README.md  vendor.sh
vendoring-app/: Cargo.toml
