[package]
name = "vendoring-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client = "0.22.0"
tokio = { version = "1.33.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
